--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2019-11-12  Enrico Schumann  <es@enricoschumann.net>
+
+        * DESCRIPTION (Version): 0.7-2
+
+        * R/functions.R (read_ts_tables): fixed -- for
+        a single series, weekends were never dropped
+
 2019-08-28  Enrico Schumann  <es@enricoschumann.net>
 
         * DESCRIPTION (Version): 0.7-1
