--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+v0.7-2  (2019-11-12)
+
+  o 'read_ts_tables': fixed -- for a single series,
+    weekends were never dropped
+
 v0.7-1  (2019-08-28)
 
   o CRAN release; no user-visible changes
