--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2020-02-28  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/functions.R (read_ts_tables): fixed -- when
+        'column.names' did not contain a placeholder
+        such as %file%, it would be ignored or lead to
+        an error
+
 2019-11-12  Enrico Schumann  <es@enricoschumann.net>
 
         * DESCRIPTION (Version): 0.7-2
