--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-12-31  Enrico Schumann  <es@enricoschumann.net>
+
+	* DESCRIPTION (Version): 1.0-0
+
 2020-08-26  Enrico Schumann  <es@enricoschumann.net>
 
         * DESCRIPTION (Version): 0.7-4
