--- a/README.org
+++ b/README.org
@@ -160,7 +160,7 @@ We first load the package.
 Start by creating time-series data.
 #+BEGIN_SRC R :session *R* :results output :exports both
   library("zoo")
-  z <- zoo(1:5, as.Date("2016-1-1")+0:4)
+  z <- zoo(1:5, as.Date("2016-1-1") + 0:4)
   z
 #+END_SRC
 
@@ -216,7 +216,7 @@ Let us write a second file. This time, we use
 =ts_table= directly.
 
 #+BEGIN_SRC R :session *R* :results output :exports both
-x <- array(1:20, dim = c(10,2))
+x <- array(1:20, dim = c(10, 2))
 colnames(x) <- c("A", "B")
 x
 #+END_SRC
@@ -238,7 +238,7 @@ x
 
 
 #+BEGIN_SRC R :session *R* :results output :exports both
-  ts_table(x, timestamp = as.Date("2016-1-1")+0:9)
+  ts_table(x, timestamp = as.Date("2016-1-1") + 0:9)
 #+END_SRC
 
 #+RESULTS:
@@ -249,7 +249,7 @@ will override the column names of the data. In fact,
 this is the preferred way, since it makes things more
 explicit (which usually means safer).
 #+BEGIN_SRC R :session *R* :results output :exports both
-  ts <- ts_table(x, timestamp = as.Date("2016-1-1")+0:9,
+  ts <- ts_table(x, timestamp = as.Date("2016-1-1") + 0:9,
 		 columns = c("B", "A"))
   ts
 #+END_SRC
