--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+v1.0-1  (2021-??-??; not yet released)
+
+  o minor documentation updates
+
 v1.0-0  (2020-12-31)
 
   o small documentation updates
