--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2021-10-28  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (read_ts_tables): allow
+	argument "frequency" to be NA, in which case
+	the function will first read all specified
+	files and compute 'timestamp' as the union of
+	the files' timestamps. Only used for POSIXct
+	timestamps. Useful for irregular time-series.
+
 2020-12-31  Enrico Schumann  <es@enricoschumann.net>
 
 	* DESCRIPTION (Version): 1.0-0
