--- a/ChangeLog
+++ b/ChangeLog
@@ -1,15 +1,19 @@
+2023-02-20  Enrico Schumann  <es@enricoschumann.net>
+
+	* DESCRIPTION (Version): 1.1-0
+
 2021-10-28  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/functions.R (read_ts_tables): allow
-	argument "frequency" to be NA, in which case
-	the function will first read all specified
-	files and compute 'timestamp' as the union of
-	the files' timestamps. Only used for POSIXct
-	timestamps. Useful for irregular time-series.
+        * R/functions.R (read_ts_tables): allow
+        argument "frequency" to be NA, in which case
+        the function will first read all specified
+        files and compute 'timestamp' as the union of
+        the files' timestamps. Only used for POSIXct
+        timestamps. Useful for irregular time-series.
 
 2020-12-31  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Version): 1.0-0
+        * DESCRIPTION (Version): 1.0-0
 
 2020-08-26  Enrico Schumann  <es@enricoschumann.net>
 
